[#69430] Fix hover card content spacing

--- a/app/components/portfolios/details_component.sass
+++ b/app/components/portfolios/details_component.sass
@@ -33,6 +33,7 @@ $status_not-set: var(--progressBar-track-bgColor) // invisible background color
     max-width: 550px
     flex-wrap: wrap
     row-gap: var(--base-size-16, 1rem)
+    justify-content: space-evenly
 
     .op-bubble
       margin: auto
